--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="C:\Users\shafi\Desktop\Portfolio Templates\Ceevee10\Resume_1.docx" download class="button">
+                     <a href="shafinmohammed-resume.docx" download class="button">
                         <i class="fa fa-download"></i>
                         Download Resume
                      </a>
