--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <h1>Check Out Some of My Works.</h1>
 
             <!-- portfolio-wrapper -->
-            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-quarters cf">
+            <div id="portfolio-wrapper" class="bgrid-halves s-bgrid-halves cf">
 
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
