added 5th project: Automobiles

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <h1>Check Out Some of My Works.</h1>
 
             <!-- portfolio-wrapper -->
-            <div id="portfolio-wrapper" class="bgrid-halves s-bgrid-halves cf">
+            <div id="portfolio-wrapper" class="bgrid-thirds s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -302,6 +302,24 @@
                            <div class="portfolio-item-meta">
           					      <h5>COVID-19 Analysis</h5>
                               <p>COVID-19 dataset analysis for S. Korea </p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+                </div> <!-- item end -->
+                
+
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-05" title="">
+                        <img alt="" src="images/portfolio/cars.gif">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>Automobiles Data</h5>
+                              <p>Data Imputation and ML Algorithms with Python</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -394,6 +412,25 @@
 
             <div class="link-box">
                <a class="project-link" href="https://shafin071.github.io/covid19-analysis/">Jupyter Notebook</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-04 End -->
+         
+
+
+         <div id="modal-05" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/cars.gif" alt="" />
+
+		      <div class="description-box">
+			      <h4>Automobiles Data</h4>
+			      <p>Data imputation, cross-validation and determination of suitable ML algorithm with Python </p>
+               <span class="categories"><i class="fa fa-tag"></i>Python, Data Imputation, Cross-Validation, Machine Learning, Jupyter Notebook</span>
+		      </div>
+
+            <div class="link-box">
+               <a class="project-link" href="https://shafin071.github.io/automobiles_imputation_classification/">Jupyter Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
