--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>About Me</h2>
 
             <p>I'm a former RF Engineer with 5 years of experience under my belt. Last year, I decided to start a 
-               new adventure and transition my career towards web application development. What excites me about coding
+               new adventure and transition my career towards software development. What excites me about coding
                is that it gives me the ability to solve problems and build something out of nothing. I want to further my
                career as a Python developer and write dynamic, robust and scalable code.  
             </p>
