edited about me

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <p>I'm a former RF Engineer with 5 years of experience under my belt. Last year, I decided to start a 
                new adventure and transition my career towards software development. What excites me about coding
-               is that it gives me the ability to solve problems and build something out of nothing. I want to further my
+               is that it gives me the ability to solve problems and build applications from open-source resources. I want to further my
                career as a Python developer and write dynamic, robust and scalable code.  
             </p>
 
