added new project - SQL/Tableau

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Shafin Mohammed.</h1>
-            <h3>I'm an avid programmer with 1+ year experience in <span>Python</span>, <span>data analysis</span> and <span>machine learning</span> looking to dive deeper into the world of big data.
+            <h3>I'm an avid programmer with experience in <span>Python</span>, <span>SQL</span>, <span>data analysis</span> and <span>machine learning</span> looking to dive deeper into the world of big data.
                Learn more <a class="smoothscroll" href="#about">about me</a></h3>
             <hr />
             <ul class="social">
@@ -93,8 +93,8 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a former RF Engineer with 5 years of experience under my belt. Last year, I decided to start a new adventure 
-               and transition my career towards software development. What excites me about coding is that it gives me the ability 
+            <p>I'm a former RF Engineer with 5 years of experience under my belt. Then I started a new adventure 
+               and transitioned my career towards software development. What excites me about coding is that it gives me the ability 
                to solve problems and build applications from open-source resources. I want to further my career in building solutions 
                by writing dynamic, robust and scalable code.
             </p>
@@ -106,9 +106,7 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Shafin Mohammed</span><br>
-						   <span>1959 Lake Boulevard<br>
-						         Davis, CA 95616
-                     </span><br>
+						   <span>Davis, CA 95616</span><br>
 						   <span>(530)902-0579</span><br>
                      <span>shafinmohammed@gmail.com</span>
 					   </p>
@@ -347,6 +345,24 @@
                      </a>
 
                   </div>
+                </div> <!-- item end -->
+                
+
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-06" title="">
+                        <img alt="" src="images/portfolio/tableau.gif">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>eCommerce Data Analysis</h5>
+                              <p>Data Analysis showing business KPIs with SQL & Tableau</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
           		</div> <!-- item end -->
 
 
@@ -452,6 +468,26 @@
 
             <div class="link-box">
                <a class="project-link" href="https://shafin071.github.io/automobiles_imputation_classification/">Jupyter Notebook</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-04 End -->
+         
+
+
+         <div id="modal-06" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/tableau.gif" alt="" />
+
+		      <div class="description-box">
+			      <h4>eCommerce Data Analysis</h4>
+			      <p>Data Analysis showing business KPIs and key insights with SQL & Tableau </p>
+               <span class="categories"><i class="fa fa-tag"></i>SQL, Tableau, KPI, Dashboards </span>
+		      </div>
+
+            <div class="link-box">
+               <a class="project-link" href="https://public.tableau.com/profile/shafin.mohammed#!/vizhome/MavenFuzzyFactorySalesReport2014part4butterfly/Story?publish=yes">See Tableau Story</a>
+               <a class="project-link" href="https://github.com/shafin071/SQL-Tableau-for-eCommerce">SQL code</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
