--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="shafinmohammed-resume.docx" download class="button">
+                     <a href="Shafin_Mohammed_Resume.pdf" download class="button">
                         <i class="fa fa-download"></i>
                         Download Resume
                      </a>
