--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a former RF Engineer with 5 years of experience under my belt. Then I started a new adventure 
-               and transitioned my career towards software development. What excites me about coding is that it gives me the ability 
-               to solve problems and build applications from open-source resources. I want to further my career in building solutions 
-               by writing dynamic, robust and scalable code.
+            <p>I am a Python developer with experience in developing web applications to provivde business solutions. 
+               I also have special interest in Data Science and Machine Learning. My goal is to unite the best of both worlds
+               to build robust, modular and deployable applications
             </p>
 
             <div class="row">
@@ -106,7 +105,7 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Shafin Mohammed</span><br>
-						   <span>Davis, CA 95616</span><br>
+						   <span>Sacramento, CA 95834</span><br>
 						   <span>(530)902-0579</span><br>
                      <span>shafinmohammed@gmail.com</span>
 					   </p>
