--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Shafin Mohammed.</h1>
-            <h3>I'm an avid programmer with experience in <span>Python</span>, <span>SQL</span>, <span>data analysis</span> and <span>machine learning</span> looking to dive deeper into the world of big data.
+            <h3><span>Python</span> | <span>SQL</span> | <span>Web Application Developer</span> | <span>Machine Learning</span> <br>
                Learn more <a class="smoothscroll" href="#about">about me</a></h3>
             <hr />
             <ul class="social">
@@ -93,7 +93,7 @@
 
             <h2>About Me</h2>
 
-            <p>I am a Python developer with experience in developing web applications to provivde business solutions. 
+            <p>I am a Python developer with experience in developing web applications and APIs with Django Framework to provivde business solutions. 
                I also have special interest in Data Science and Machine Learning. My goal is to unite the best of both worlds
                to build robust, modular and deployable applications
             </p>
